[package]
name = "ryg-rans-sys"
version = "1.2.0"
edition = "2024"
description = "FFI bindings for ryg_rans.\n\nryg_rans is automatically built and linked statically. Requires a C compiler."
categories = [ "external-ffi-bindings", "encoding" ]
authors = ["Mateusz Maćkowski <mateusz@mackowski.org>"]
include = ["src/**/*", "vendor/**/*", "Cargo.toml", "README.md"]
keywords = ["rANS", "ANS", "static"]
readme = "README.md"
repository = "https://github.com/m4tx/ryg-rans-sys.git"
homepage = "https://github.com/m4tx/ryg-rans-sys"
license = "MIT"
links = "ryg_rans"
rust-version = "1.85.0"

[dependencies]

[build-dependencies]
cc = { version = "1.0.83", features = ["parallel"] }
dunce = "1.0.4"
bindgen = "0.72.0"

[lib]
name = "ryg_rans_sys"
crate-type = ["staticlib", "cdylib", "lib"]

[features]
default = ["byte"]
byte = []
64 = []
word_sse41 = []
